--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ repository               : "ssegota/ssegota.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "avatar.png"
   name             : "Sandi Baressi Šegota"
   pronouns         : # example: "she/her"  
-  bio              : "A PhD student focusing on ML and Robotics"
+  bio              : "Researching the application of AI in complex engineering systems"
   location         : "Rijeka, Croatia"
   employer         : "University of Rijeka"
   uri              : "http://portal.uniri.hr/Portfolio/details/4228" # URL
